syntax = "proto3";

option csharp_namespace = "IdentityService.gRPC";

package identity.auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string userName = 3;
  string email = 4;
  string password  = 5;
  string organizationName = 6;
}

message RegisterResponse {
  string userId = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string userId = 1;
  string accessToken = 2;
  string refreshToken = 3;
}
